# kprojekt

./: .flake8  README.md  processing.py  pyproject.toml
home_works_kurs2/: pyproject.toml
home_works_kurs2/src/: masks.py
src/: masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
